# Tiago-MSc-Thesis

./: .gitignore  LICENSE  README.md  inference.py  requirements.txt  train.py
1_dataset_processing/: README.md
1_dataset_processing/1.1_remind/: edit_remind_masks.py  process_remind_data.py  remind_config.json
1_dataset_processing/1.2_upenn/: edit_upenn_masks.py  process_upenn_data.py  upenn_config.json
2_biomechanical_simulations/: 2.1_generate_solver_inputs.py  2.2_run_simulations.py  README.md
2_biomechanical_simulations/MTLED/: CMakeLists.txt  INSTALL.md  README.md  README2.txt  dev.cpp  main.cpp
2_biomechanical_simulations/MTLED/bucketsearch/: CMakeLists.txt  bucketsearch.cpp  bucketsearch.hpp
2_biomechanical_simulations/MTLED/cmake/modules/: FindIMP.cmake  FindTINYXML2.cmake
2_biomechanical_simulations/MTLED/doc/: CMakeLists.txt  explicit_sim.dox  explicitsim_doxyfile.in
2_biomechanical_simulations/MTLED/include/ExplicitSim/: explicit_sim.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/approximants/: mmls_3d.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/conditions/: conditions.hpp  conditions_handler.hpp  contact_pair.hpp  load_curve.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/elements/: element_properties.hpp  elements.hpp  node.hpp  surface.hpp  tetrahedron.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/exporters/: exporters.hpp  paraview_exporter.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/grid/: grid_3d.hpp  grids.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/integration/: integ_options.hpp  integ_points.hpp  integration.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/materials/: material.hpp  neo_hookean.hpp  ogden.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/mesh/: mesh.hpp  mesh_properties.hpp  tetramesh.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/mesh_io/: abaqus_io.hpp  abaqus_io.tpp  febio_io.hpp  mesh_io.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/models/: models.hpp  weak_model_3d.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/options_configuration/: config_manager.hpp  config_manager.tpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/sets/: node_set.hpp  sets.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/solvers/: dyn_relax_prop.hpp  mtled.hpp  solvers.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/support_domain/: support_domain.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/utilities/: logger.hpp  timer.hpp  utilities.hpp
2_biomechanical_simulations/MTLED/include/ExplicitSim/vectors/: vec3.hpp  vec3.tpp  vectors.hpp
2_biomechanical_simulations/MTLED/src/approximants/: CMakeLists.txt  mmls_3d.cpp
2_biomechanical_simulations/MTLED/src/conditions/: CMakeLists.txt  conditions_handler.cpp  contact_pair.cpp  load_curve.cpp
2_biomechanical_simulations/MTLED/src/contacts/: CMakeLists.txt  ContactPair.cpp  ContactPair.hpp  TriangularSurface.cpp  TriangularSurface.h  cdef.h  contact_test.c  matrix.cpp  matrix.h  utils.cpp  utils.h  vect.h
2_biomechanical_simulations/MTLED/src/elements/: CMakeLists.txt  node.cpp  tetrahedron.cpp
2_biomechanical_simulations/MTLED/src/exporters/: CMakeLists.txt  paraview_exporter.cpp
2_biomechanical_simulations/MTLED/src/grid/: CMakeLists.txt  grid_3d.cpp
2_biomechanical_simulations/MTLED/src/integration/: CMakeLists.txt  integ_points.cpp
2_biomechanical_simulations/MTLED/src/materials/: CMakeLists.txt  material.cpp  neo_hookean.cpp  ogden.cpp
2_biomechanical_simulations/MTLED/src/mesh/: CMakeLists.txt  tetramesh.cpp
2_biomechanical_simulations/MTLED/src/mesh_io/: CMakeLists.txt  abaqus_io.cpp  febio_io.cpp
2_biomechanical_simulations/MTLED/src/models/: CMakeLists.txt  weak_model_3d.cpp
2_biomechanical_simulations/MTLED/src/options_configuration/: CMakeLists.txt  config_manager.cpp
2_biomechanical_simulations/MTLED/src/sets/: CMakeLists.txt  node_set.cpp
2_biomechanical_simulations/MTLED/src/solvers/: CMakeLists.txt  dyn_relax_prop.cpp  mtled.cpp
2_biomechanical_simulations/MTLED/src/support_domain/: CMakeLists.txt  support_domain.cpp
2_biomechanical_simulations/MTLED/src/utilities/: CMakeLists.txt  timer.cpp
2_biomechanical_simulations/MTLED/src/vectors/: CMakeLists.txt
2_biomechanical_simulations/simulation_pipeline/: assign_material_properties.py  compute_nodal_displacements.py  compute_tumor_reaction_forces.py  define_skull_boundaries.py  find_gravity_vectors.py  generate_integration_points.py  generate_meshes.py  identify_tumor.py  reconstruct_model.py
3_displacement_fields/: 3.1_resample_spacing.py  3.2_get_displacement_field.py  README.md  config.json
4_keypoints_extraction/: 4_extract_sift_features.py  README.md
4_keypoints_extraction/3DSIFT-Rank/: CMakeLists.txt  README.md
4_keypoints_extraction/3DSIFT-Rank/featExtract/: CMakeLists.txt  featExtract.cpp
4_keypoints_extraction/3DSIFT-Rank/featMatchMultiple/: CMakeLists.txt  featMatchMultiple.cpp
4_keypoints_extraction/3DSIFT-Rank/feat_common/: CMakeLists.txt  FeatureIOnifti.cpp  FeatureIOnifti.h  featMatchUtilities.cpp  featMatchUtilities.h
4_keypoints_extraction/3DSIFT-Rank/src_common/: CMakeLists.txt  FeatureIO.cpp  FeatureIO.h  GaussBlur3D.cpp  GaussBlur3D.h  GaussianMask.cpp  GaussianMask.h  GenericImage.cpp  GenericImage.h  LocationValue.cpp  LocationValue.h  MultiScale.cpp  MultiScale.h  PpImage.cpp  PpImage.h  PpImageFloatOutput.cpp  PpImageFloatOutput.h  SVD.h  TextFile.cpp  TextFile.h  svdcmp.cpp  svdcmp.h
model_pipeline/datatools/: loader.py
model_pipeline/metrics/: logger.py  metric_tracker.py
model_pipeline/networks/unet3d/: buildingblocks.py  model.py  utils.py
model_pipeline/networks/vxm/: layers.py  model.py
model_pipeline/training/: trainer.py
model_pipeline/utils/: utils.py
network/: README.md  inference.py  requirements.txt  train.py
network/assets/: config_arguments.md
network/model_pipeline/datatools/: transforms.py
network/model_pipeline/interpolators/: interpolators.py
(+5 files in other folders)
